modal fix width

--- a/public/reporte_diario.html
+++ b/public/reporte_diario.html
@@ -58,6 +58,7 @@
     .modal.fade.show {
       opacity: 1 !important;
       display: block !important;
+      width: 300px;
     }
 
     div.as-link {
