modal dialog max width

--- a/public/reporte_diario.html
+++ b/public/reporte_diario.html
@@ -58,7 +58,10 @@
     .modal.fade.show {
       opacity: 1 !important;
       display: block !important;
-      width: 300px;
+    }
+
+    .modal-dialog.modal-sm {
+      max-width: 300px;
     }
 
     div.as-link {
