--- a/public/reporte_diario.html
+++ b/public/reporte_diario.html
@@ -186,12 +186,29 @@
         width: 642px;
       }
     }
-    
-    
+
+    #landscape-warning {
+      display: none;
+      position: fixed;
+      z-index: 9999;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: #000;
+      color: #fff;
+      text-align: center;
+      padding-top: 40vh;
+      font-size: 1.5rem;
+      max-width: 100vw;
+    }
+
+    @media screen and (orientation: portrait) {
+      #landscape-warning { display: block; }
+      #report_container { display: none; }
+    }   
 
   </style>
 </head>
 <body>
+  <div id="landscape-warning">Por favor rote su dispositivo</div>
   <div class="print-header">
     <img src="img/membrete-2025_con_logo_slhi.jpg" alt="Instituto Nacional del Agua" />
   </div>
